# DeckTranslate

./: .gitignore  Cargo.toml  README.md  decksample.txt  decksample2.txt  decktr.py  scryfallapi.py
deck-translate/: Cargo.toml
deck-translate/src/: deck.rs  main.rs
samples/: decksample2.txt  deckstats.py  squirrels.txt  stats.txt
scryfall_rs/: Cargo.toml
scryfall_rs/src/: errors.rs  lib.rs
src/: deck.rs  main.rs  scryfall.rs
src/scryfall/: api.rs  card.rs  errors.rs
tests/: decksample.txt  monogreen.txt
