[package]
name = "deck-translate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
serde_json = { version = "1.0" }
regex = "1"
clap = { version = "3.2.16", features = ["derive"] }
serde = { version = "1.0.144", features = ["derive"] }
